--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -5,14 +5,14 @@
 h1{
     font-size: 50px;
     font-weight: 400;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
 h5{
     font-size: 36px;
     font-weight: 400;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Serif JP', serif;
     text-align: left;
     margin-bottom: 10px;
 }
@@ -25,14 +25,14 @@ p{
     text-align: justify;
     margin-bottom: 30px;
     font-weight: 400;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Sans JP', sans-serif;
 }
 .service{
     cursor: pointer;
     // p{
     //     text-align: left;
     //     font-weight: 400;
-    //     font-family: 'Noto Serif', serif;
+    //     font-family: 'Noto Serif JP', serif;
     //     color: #000;
     // }
     h4{
@@ -53,7 +53,7 @@ p{
     padding: 0;
     font-size: 12px;
     font-weight: 400;
-    font-family: 'Noto Serif', serif;
+    font-family: 'Noto Sans JP', sans-serif;
     cursor: pointer;
 }
 
@@ -64,12 +64,12 @@ p{
         font-size: 64px;
         font-weight: 400;
         text-align: center;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Serif JP', serif;
     }
     p{
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: center;
         margin-top: 20px;
     }
@@ -90,7 +90,7 @@ p{
         .list{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             margin-left: 10px;
         }
     }
@@ -102,7 +102,7 @@ p{
         .list{
             font-size: 14px;
             font-weight: 400;
-            font-family: 'Noto Serif', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             margin-left: 4px;
         }
     }
@@ -139,7 +139,7 @@ p{
         color: #797979;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         text-align: justify;
         margin-bottom: 30px;
         margin-top: 10px;
@@ -148,7 +148,7 @@ p{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 30px; 
      }
      .step-image img{
@@ -180,7 +180,7 @@ p{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 30px;
     }
     .step-image img{
@@ -203,7 +203,7 @@ p{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 400;
-        font-family: 'Noto Serif', serif;
+        font-family: 'Noto Sans JP', sans-serif;
         margin-bottom: 30px;
     }
     .step-image img{
@@ -248,7 +248,7 @@ p{
             font-size: 35px;
             font-weight: 400;
             text-align: left;
-            font-family: 'Noto Serif', serif;
+            font-family: 'Noto Serif JP', sans-serif;
         }
         .step-image{
             width: 60%;
@@ -259,7 +259,7 @@ p{
         p{
             font-size: 13px;
             font-weight: 400;
-            font-family: 'Noto Serif', serif;
+            font-family: 'Noto Sans JP', sans-serif;
             text-align: justify;
             margin-top: 10px;
         }
@@ -274,7 +274,7 @@ p{
             span{
                 font-size: 13px;
                 font-weight: 400;
-                font-family: 'Noto Serif', serif;
+                font-family: 'Noto Sans JP', sans-serif;
                 margin-left: 10px;
             }
         }
