--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -125,7 +125,7 @@ p{
         width: 40%;
         height: 5px;
         margin-left: 350px;
-        margin-top: -12px;
+        margin-top: -2px;
     }
     p{
         font-size: 14px;
@@ -263,7 +263,7 @@ p{
     }
     h5{
         font-size: 25px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     p{
         font-size: 13px;
@@ -285,8 +285,8 @@ p{
         .step-image{
             width: 57%;
             height: 4px;
-            margin-left: 0px;
-            margin-top: -15px;
+            margin-left: 20px;
+            margin-top: -10px;
         }
         p{
             font-size: 13px;
@@ -304,7 +304,7 @@ p{
             // }
             span{
                 font-size: 13px;
-                font-weight: 300;
+                //font-weight: 300;
                 margin-left: 20px;
             }
         }
