--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-3"></div>
     </div>
-    <div class="row">
+    <div class="row list-icons">
       <!-- <div class="col-md-1"></div> -->
       <div class="col-md-3">
         <h3><img src="/assets/images/services/usability-testing/img-11.svg" /><span class="list1">Understanding Product</span></h3>
@@ -155,30 +155,30 @@
           <img src="/assets/images/services/usability-testing/img-1.svg" />
           <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
           <img src="/assets/images/services/usability-testing/img-2.svg" />
-          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img class="line-2" class="line-3" src="/assets/images/services/usability-testing/line-2.svg" />
           <img src="/assets/images/services/usability-testing/img-3.svg" />
           <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
           <img src="/assets/images/services/usability-testing/img-4.svg" />
-          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img class="line-2" class="line-4" src="/assets/images/services/usability-testing/line-2.svg" />
           <img src="/assets/images/services/usability-testing/img-5.svg" />
-          <img class="line-2" src="/assets/images/services/usability-testing/line-2.svg" />
+          <img class="line-2" class="line-5" src="/assets/images/services/usability-testing/line-2.svg" />
           <img src="/assets/images/services/usability-testing/img-6.svg" />
         </div>
         <div class="col-md-10">
           <h3>Task Planning</h3>
           <p>The scenarios for testing are planned along with the environment and the resultant parameters</p>
-          <h3>Prepare Tasks</h3>
-          <p>We choose the right framework to suite</p>
-          <h3>Recuit The Users</h3>
-          <p>We choose the right framework to suite</p>
-          <h3>Performing Tasks By The User</h3>
-          <p>We choose the right framework to suite</p>
+          <h3>Recuit Users</h3>
+          <p>Ideal users of the product or website are defined and recruited to suite the different personas</p>
+          <h3>Test Execution</h3>
+          <p>Users are briefed on the tasks and are recorded</p>
           <h3>Analysis</h3>
-          <p>We choose the right framework to suite</p>
+          <p>The task outcome, observations, physical gestures recorded are analysed</p>
           <h3>Test Report</h3>
-          <p>We choose the right framework to suite</p>
-          <h3>Recommendation Based On Results</h3>
-          <p>We choose the right framework to suite</p>
+          <p>Summary of outcome are comparitively reported to the business team</p>
+          <h3>Recommendations</h3>
+          <p>Recommendations and feature enhancements based on the user expectations for further iterations</p>
+          <!-- <h3>Recommendation Based On Results</h3>
+          <p>We choose the right framework to suite</p> -->
         </div>
       </div>
       <!-- <div class="row">
@@ -243,7 +243,7 @@
 <section class="methods">
   <div class="container">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-5">
         <h1>Methods We Follow In Usability Testing</h1>
       </div>
     </div>
