--- a/src/app/components/cater/cater.component.scss
+++ b/src/app/components/cater/cater.component.scss
@@ -76,7 +76,7 @@
         color: #5F5F5F;
         font-size: 14px;
         text-align: left;
-        font-weight: 300;
+        font-weight: 400;
         margin-bottom: 20px;
     }
 }
@@ -483,7 +483,7 @@
         h1{
             font-size: 24px;
             font-weight: 400;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
@@ -494,7 +494,7 @@
             font-size: 13px;
             font-weight: 400;
             text-align: justify;
-            //margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .step-image{
             margin-top: 20px;
@@ -513,7 +513,7 @@
         h1{
             font-size: 24px;
             font-weight: 400;
-            margin-bottom: 0;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
@@ -526,10 +526,13 @@
             font-weight: 400;
             text-align: justify;
         }
+        .buttn{
+            padding-top: 30px;
         .btn{
             background-color: #000;
             color: #ffffff;
         }
+    }
         .step-image img{
             width: 100%;
             height: auto;
@@ -555,12 +558,15 @@
         h1{
             font-size: 24px;
             font-weight: 400;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
             font-weight: 400;
             margin-bottom: 10px;
+        }
+        h5{
+            margin-top: 40px;
         }
         p{
             font-size: 13px;
@@ -589,7 +595,7 @@
         h1{
             font-size: 24px;
             font-weight: 400;
-            margin-bottom: 10px;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
@@ -614,6 +620,7 @@
         h1{
             font-size: 24px;
             font-weight: 400;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
@@ -642,6 +649,7 @@
         h1{
             font-size: 24px;
             font-weight: 400;
+            margin-bottom: 15px;
         }
         h2{
             font-size: 17px;
