--- a/src/app/components/services/front-end-development/development.component.scss
+++ b/src/app/components/services/front-end-development/development.component.scss
@@ -14,7 +14,7 @@ h5{
     font-weight: 400;
     font-family: 'Noto Serif JP', serif;
     text-align: left;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 .highlight{
     color: #60D6C9;
@@ -71,7 +71,7 @@ p{
         width: 60%;
         height: 5px;
         margin-left: 115px;
-        margin-top: -20px;
+        margin-top: -10px;
     }
     p{
         font-size: 14px;
@@ -87,7 +87,7 @@ p{
             width: 30%;
             height: 30px;
         }
-        span{
+        .list{
             font-size: 14px;
             font-weight: 400;
             font-family: 'Noto Serif JP', serif;
@@ -99,7 +99,7 @@ p{
             width: 20%;
             height: 30px;
         }
-        span{
+        .list{
             font-size: 14px;
             font-weight: 400;
             font-family: 'Noto Sans JP', sans-serif;
@@ -281,7 +281,7 @@ p{
     }
     h5{
         font-size: 24px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     p{
         font-size: 13px;
@@ -303,8 +303,8 @@ p{
         .step-image{
             width: 60%;
             height: 4px;
-            margin-left: 20px;
-            margin-top: -15px;
+            margin-left: 40px;
+            margin-top: -10px;
         }
         p{
             font-size: 13px;
@@ -319,9 +319,9 @@ p{
                 width: auto;
                 height: auto;
             }
-            span{
+            .list{
                 font-size: 13px;
-                font-weight: 300;
+                font-weight: 400;
                 margin-left: 10px;
             }
         }
@@ -331,27 +331,38 @@ p{
                 height: auto;
             }
             .list{
-                margin-left: 30px;
+                font-size: 13px;
+                margin-left: 21px;
+                font-weight: 400;
+                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img2{
             .list{
-                margin-left: 21px;
+                margin-left: 20px;
+                font-family: 400;
+                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img3{
             .list{
-                margin-left: 18px;
+                margin-left: 22px;
+                font-family: 400;
+                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img4{
             .list{
-                margin-left: 30px;
+                margin-left: 24px;
+                font-family: 400;
+                font-family: 'Noto Sans JP', sans-serif;
             }
         }
         .img5{
             .list{
-                margin-left: 28px;
+                margin-left: 19px;
+                font-family: 400;
+                font-family: 'Noto Sans JP', sans-serif;
             }
         }
     }
